cabal-version:      3.0
name:               servant-tutorial
version:            0.1.0.0
synopsis:           Servant Tutorial
-- description:
homepage:           https://github.com/isaac025/servant-tutorial
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             Isaac Lopez
maintainer:         isaac.lopez@upr.edu
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable servant-tutorial
    import:           warnings
    main-is:          Main.hs
    other-modules:    Intro
                    , Server
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , base-compat
                    , mtl
                    , aeson
                    , attoparsec
                    , attoparsec-aeson
                    , bytestring
                    , blaze-markup
                    , blaze-html
                    , directory
                    , text
                    , time
                    , servant
                    , servant-server
                    , servant-client
                    , string-conversions
                    , lucid
                    , http-media
                    , wai
                    , warp
    hs-source-dirs:   src
    default-language: Haskell2010
